yamls/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground
spec:
  selector:
    matchLabels:
      app: wil-playground
  replicas: 1
  template:
    metadata:
      labels:
        app: wil-playground
    spec:
      containers:
      - name: wil-playground
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: wil-service
  labels:
    app: wil-playground
spec:
  type: ClusterIP
  selector:
    app: wil-playground
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8888
